--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,32 @@
 /* Style sheet for Rock Paper Scissors project */
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
 
 .announce{
   position: relative;
   top: 75px;
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
+}
 
+.keys {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 40vh;
+}
+
+.key {
+  margin-left: 10px;
+  margin-right: 10px;
+  padding: 10px;
+  border-style: solid;
+  border-color: black;
+  transition: all 1s;
+}
+
+.active {
+  border-color: red;
+  
 }
