--- a/styles.css
+++ b/styles.css
@@ -17,13 +17,15 @@ body {
   min-height: 40vh;
 }
 
-.key {
+.btn {
+  width: 100px;
   margin-left: 10px;
   margin-right: 10px;
   padding: 10px;
+  font-size: 16px;
   border-style: solid;
   border-color: black;
-  transition: all 1s;
+  
 }
 
 .active {
