--- a/styles.css
+++ b/styles.css
@@ -4,17 +4,18 @@ body {
 }
 
 .announce{
-  position: relative;
-  top: 75px;
+  margin-top: 20px;
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
+  border-style: solid;
 }
 
 .container {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 40vh;
+  min-height: 20vh;
+  border-style: solid;
 }
 
 .btn {
