Add UI buttons to replace the replay prompt
Removed the annoying pop up prompt asking for a new game. Replaced it
with buttons that appear once the game is over. A new event listener
had to be added for the new buttons. The buttons are hard coded into
the HTML but are hidden unil the game is over and a new class is
added to them.

--- a/styles.css
+++ b/styles.css
@@ -26,10 +26,28 @@ body {
   font-size: 16px;
   border-style: solid;
   border-color: black;
-  
 }
+
+.btn--1 {
+  width: 100px;
+  margin-left: 10px;
+  margin-right: 10px;
+  padding: 10px;
+  font-size: 16px;
+  border-style: solid;
+  border-color: black;
+}
+      
 
 .active {
   border-color: red;
   
+}
+
+.replay {
+  display: none;
+}
+
+.replay--active {
+  display: block;
 }
