--- a/styles.css
+++ b/styles.css
@@ -22,9 +22,10 @@
 
 .container {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  margin-bottom: 50px;
+  margin-bottom: 20px;
 }
 
 .container--col {
@@ -40,15 +41,14 @@
   align-items: center  
 }
 
-.center {
-  margin: auto;
-  width: 375px;
+.break {
+  width: 100vw;
 }
 
-@media (max-width: 500px) {
-  .center {
-    width: 85%;
-  }
+.stats {
+  margin-top: 20px;
+  padding-left: 50px;
+  width: 375px;
 }
 
 .btn {
@@ -64,8 +64,18 @@
   font-size: 16px;
 }
 
+@media (max-width: 400px) {
+  .btn {
+    margin-left: 5px;
+    margin-right: 5px;
+    margin-bottom: 10px;
+  }
+}
+
 .btn-replay {
   margin-bottom: 15px;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 button:active {
