Move table total scores to the right most column
Moving the total scores to the right hand side make the table read
more like a baseball box score with innings and total runs.

--- a/styles.css
+++ b/styles.css
@@ -122,8 +122,10 @@ button:hover {
 }
 
 .tableTotal {
+  width: 20px;
   background-color: #d8dee9;
   font-weight: bold;
+  text-align: center;
 }
 
 .border {
