Use array for computer selections
Also updated the disabled formating for the buttons

--- a/styles.css
+++ b/styles.css
@@ -78,10 +78,15 @@
   margin-right: 10px;
 }
 
+.btn--disabled {
+  background-color: #eceff4;
+  color: #4C566A;
+}
+
 button:active {
   border-style: solid;
   border-color: blue;
-  border-width: 1px;
+  border-width: 2px;
 }
 
 button:hover {
